# slint-chat

./: CLAUDE.md  Cargo.toml
docs/plans/: 2026-02-27-chatgpt-ui-redesign.md
src/: app_state.rs  lib.rs  main.rs  settings.rs
src/api/: client.rs  stream.rs
src/markdown/: renderer.rs
src/models/: assistant.rs  message.rs  mod.rs  topic.rs
src/storage/: db.rs
ui/: app.slint  chat_view.slint  input_bar.slint  settings_view.slint  sidebar.slint
ui/components/: markdown_view.slint  message_bubble.slint  model_selector.slint  quick_phrases.slint  reasoning_view.slint
