[package]
name = "slint-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = "1"
tokio = { version = "1", features = ["full"] }
pulldown-cmark = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
anyhow = "1"
futures-util = "0.3"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"

[build-dependencies]
slint-build = "1"
